--- a/.github/workflows/builddockerimages.yml
+++ b/.github/workflows/builddockerimages.yml
@@ -45,26 +45,26 @@ jobs:
           
       - name: Build and push multi-arch images
         run: |
+          #--platform linux/amd64,linux/arm64 \
           docker buildx build \
-            --platform linux/amd64,linux/arm64 \
+            --platform linux/arm64 \
             -f ./Dockerfile \
             -t ghcr.io/${{ github.repository }}:${{ github.sha }}-amd64 \
             -t ghcr.io/${{ github.repository }}:${{ github.sha }}-arm64 \
             -t ghcr.io/${{ github.repository }}:latest \
             --push .
 
-      - name: Create or update release notes
-        env:
-          SHORT_SHA: ${{ env.SHORT_SHA }}
-          DATE_TAG: ${{ env.DATETIME_TAG }}
-          GHCR_IMAGE: ${{ github.repository }}
-        run: |
-          RELEASE_BODY="Multi-arch images pushed:\n
-          - latest: https://github.com/${GHCR_IMAGE}/packages/container/${GHCR_IMAGE}\n
-          - $DATE_TAG: https://github.com/${GHCR_IMAGE}/packages/container/${GHCR_IMAGE}?tag=$DATE_TAG"
-      
-          gh release create $SHORT_SHA --title "Release $SHORT_SHA" --notes "$RELEASE_BODY" || \
-          gh release edit $SHORT_SHA --notes "$RELEASE_BODY"
+      - name: Create or update release
+        uses: peter-evans/create-or-update-release@v5
+        with:
+          tag_name: ${{ github.sha }}
+          release_name: Release ${{ github.sha }}
+          body: |
+            Multi-arch images pushed:
+            - latest: https://github.com/${{ github.repository }}/packages/container/${{ github.repository }}
+            - ${{ env.DATETIME_TAG }}: https://github.com/${{ github.repository }}/packages/container/${{ github.repository }}?tag=${{ env.DATETIME_TAG }}
+          draft: false
+          prerelease: false
           
 # jobs:
 #   build-multiarch:
